# home-work

./: .env.template  .envtemplate  .gitignore  README.md  pyproject.toml
apps/catalog/: admin.py  apps.py  forms.py  services.py  urls.py  views.py
apps/catalog/fixtures/: catalog_data.json
apps/catalog/management/commands/: initdb.py
apps/catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published.py  0002_product_manufactured_at.py  0003_alter_product_options.py  0003_remove_product_manufactured_at.py  0004_censor.py  0005_alter_censor_options_alter_product_image_version.py
apps/catalog/models/: __init__.py  category.py  censor.py  product.py  version.py
apps/catalog/static/css/: styles.css
apps/catalog/templates/catalog/: base.html  category_list.html  feedback.html  index.html  product.html  product_detail.html  product_form.html  product_list.html  version_form.html  version_list.html
apps/catalog/templatetags/: custom_tags.py
apps/catalog/views/: __init__.py  categories.py  feedback.py  product.py  version.py
apps/posts/: models.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_alter_post_preview.py
apps/posts/templates/posts/: post_detail.html  post_form.html  post_list.html
apps/users/: apps.py  forms.py  models.py  permissions.py  urls.py  views.py
apps/users/management/commands/: createmoderator.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_managers_user_is_email_verified.py  0004_alter_user_is_email_verified.py
config/: settings.py  urls.py
(+6 files in other folders)
