[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Lewbertsklol <lewbertsklol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg-binary = "^3.2.1"
psycopg = "^3.2.1"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
django-extensions = "^3.2.3"
ipython = "^8.26.0"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
